@@ -176,6 +176,7 @@ export(abbreviateTimeLabels,
        numberAsHMS,
        numberAsPOSIXct,
        ODF2oce,
+       ODFListFromHeader,
        ODFNames2oceNames,
        oce.approx, oceApprox,
        oce.as.raw,
